# Spelling-Bee-Helper

./: .gitignore  readme.md  setup.py
src/Spelling-Bee-Helper/: _database.py  _helper.py  _interface.py  _solver.py  _tools.py  main.py
src/sbhelper/: __main__.py  _helper.py  _interface.py  _solver.py  _tools.py  command_line.py
src/wghelper/: __main__.py  _database.py  _helper.py  _interface.py  _solver.py  _tools.py  command_line.py  pyproject.toml  readme.md
tests/: test_entrypoints.py  test_interface.py
