[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "word_game_helper"
version = "0.0.1"
authors = [
  { name="Cormac O' Sullivan", email="info@cosullivan.dev" },
]
description = "CLI tool to help solve various word games using logical and regular expressions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ctosullivan/Word-Game-Helper"
Issues = "https://github.com/ctosullivan/Word-Game-Helper/issues"